<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_weight="1.0"
    	android:padding="10dip">
    	
		<TextView  
	    	android:layout_width="fill_parent" 
	    	android:layout_height="wrap_content"
	    	android:id="@+id/txtHeading"
	    	android:text="@string/app_desc"
	    	android:textColor="#FFFFFF"
	    	android:textStyle="bold|italic"
	    	android:paddingTop="10dip"
	    	android:paddingBottom="10dip"
	    	android:gravity="left"/>
	    	
	    <TextView  
	    	android:layout_width="fill_parent" 
	    	android:layout_height="wrap_content"
	    	android:id="@+id/txtInfo"
	    	android:text="@string/app_info"
	    	android:textColor="#FFFFFF"/>
	    	
	    <LinearLayout
	    	android:orientation="vertical"
			android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:paddingTop="10dip"
			android:paddingBottom="10dip">
	    	
	    	<View 
		    	android:id="@+id/divider"
			    android:background="@drawable/bw_gradient"
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"/>
	    	
	   	</LinearLayout>
	    	
	    <TextView  
	    	android:layout_width="fill_parent" 
	    	android:layout_height="wrap_content"
	    	android:id="@+id/txtLog"/>
	    	
    </LinearLayout>
    
    <LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	
    	android:gravity="center_vertical|center_horizontal">
    	
	    <Button
	    	android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:id="@+id/btnStartStop"
		    android:text="@string/start_caption"
		    android:paddingLeft="20dip"
		    android:paddingRight="20dip"/>
		    
	</LinearLayout>
</LinearLayout>
